# borf

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  <repl>.dot  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  test.txt  test_error.borf  test_import.borf
.cursor/rules/: lint-test.mdc
docs/: 00_big_idea.md  01_phase1.md  02_phase2.md  PULL_REQUEST.md  chapter1.borf  data_model.md  implementation_plan.md  pratt_parser_test_plan.md  qparser_roadmap.md
docs/guides/: borf_style_guide.md  easy_streams.md  generators.md  rewriting_to_idiomatic_borf.md  transformation_summary.md
examples/: acset_interaction_net.borf  advanced_pipeline_manipulation.borf  error_demo.rs  example_usage_patterns.borf  homoiconic.borf  imported_exported_pipelines.borf  simplified_acset.borf
examples/minimal/: acset.borf  app_expr.borf  basic_test.borf  comp_expr.borf  fixed_acset.borf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
lsmer/: .pre-commit-config.yaml  Cargo.toml  README.md  implementation_plan.md
lsmer/docs/: 00_big_idea.md  01_phase1.md  02_phase2.md
lsmer/src/: background.rs  bloom.rs  cache.rs  lib.rs  lsm.rs  main.rs  memtable.rs  node_alloc.rs  ring_buffer.rs  skiplist_map.rs  sstable.rs  wal.rs
qparser/: Cargo.toml  README.md
qparser/src/: ast.rs  lib.rs  parser.rs  tests.rs
qstorage/: Cargo.toml
qstorage/src/: lib.rs
repl/: Cargo.toml
repl/src/: main.rs
simp/: README.md
src/: borf.pest  concurrent.rs  error.rs  error_reporting.rs  errors.rs  evaluator.rs  integration.rs  lib.rs  main.rs  observer.rs  parser.rs  runtime.rs  semantics.rs  traceable_parser.rs  tracing_setup.rs
src/evaluator/: mod.rs
src/examples/: homoiconic.borf
src/parser/: ast.rs  borf.pest  category.rs  common_expr.rs  directives.rs  error.rs  expressions.rs  grammar.pest  laws.rs  mod.rs  parse_tests.rs  pratt.rs  pratt_tests.rs  prelude_parse_tests.rs  tests.rs
src/parser/snapshots/: borf__parser__prelude_parse_tests__test_primitives_module.snap
src/prelude/: abelian.borf  adjunction.borf  affine.borf  applicative.borf  arrow.borf  bicategory.borf  bifunctor.borf  callcc.borf  cat.borf  cata.borf  cav.borf  ccc.borf  coequalizer.borf  coll.borf  computation.borf  context.borf  core.borf  coroutine.borf  dagger.borf  double.borf  equalizer.borf  extractor.borf  flogic.borf  flp.borf  free.borf  freyd.borf  generator.borf  graph.borf  grph.borf  hom.borf  inet.borf  io.borf  kan.borf  kleisli.borf  lambda.borf  linear.borf  minikanren.borf  mod.borf  monoidal.borf  net.borf  (+35 more)
src/prelude/cata/: abelianxf.borf  adjunctionxf.borf  affinexf.borf  applicativexf.borf  arrowxf.borf  bicategoryxf.borf  bifunctorxf.borf  callccxf.borf  catxf.borf  cavxf.borf  cccxf.borf  collxf.borf  computationxf.borf  contextxf.borf  coroutinexf.borf  daggerxf.borf  doublexf.borf  extractorxf.borf  flpxf.borf  freexf.borf  freydxf.borf  generatorxf.borf  graphxf.borf  inetxf.borf  ioxf.borf  kanxf.borf  kleislixf.borf  lambdaxf.borf  limitxf.borf  linear.borf  linearxf.borf  minikanrenxf.borf  mod.borf  modxf.borf  monoidalxf.borf  operadxf.borf  opticsxf.borf  parserxf.borf  pipeline.borf  pipelinexf.borf  (+26 more)
src/prelude/parser/: combinators.borf  derivative.borf  examples.borf  grammar.borf  memo.borf  mod.borf  primitives.borf  types.borf
tests/: acset_mapping.borf  acset_simple.borf  mapping_test.borf  parser_snapshots.rs  product.borf  product_test.borf  repl_tests.rs  wierdgm_mapping.borf  wierdgm_simple.borf
