 [package]
 name = "lsm_tree"
 version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <you@example.com>"]
 description = "Rust port of the Zig LSM-Tree implementation"
 license = "MIT OR Apache-2.0"

 [dependencies]
rand = "0.8"
crossbeam-skiplist = "0.1"
    bumpalo = "3"
    ringbuf = "0.4"
arrow2 = { version = "0.18", features = ["io_ipc"] }
    crc32fast = "1.3"
    serde = { version = "1.0", features = ["derive"] }
    bincode = "1.3"

 [dev-dependencies]
 tempfile = "3"
